--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -1,4 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>{{title}}</title>
+</head>
+<body>
 
+<div class="container" action="">
+<form>
+    <h1>{{heading}}</h1>
+    <p><i>Please fill in the following fields. A * denotes required information.</i></p>
+    <label for="title"><b>Title</b></label>
+    <input type="text" name="title">
+    <br>
+    <label for="first_name"><b>First Name</b></label>
+    <input type="text" name="first_name" required>
+    <br>
+    <label for="last_name"><b>Last Name</b></label>
+    <input type="text" name="last_name" required>
+    <br>
+    <label for="company_name"><b>Company Name</b></label>
+    <input type="text" name="company_name" required>
+    <br>
+    <label for="department"><b>Department</b></label>
+    <input type="text" name="department">
+    <br>
+    <label for="plant_level"><b>Plant Level</b></label>
+    <input type="text" name="plant_level">
+    <br>
+    <label for="primary_phone"><b>Primary Phone Number</b></label>
+    <input type="number" name="" required>
+    <br>
+    <label for=""><b>Secondary Phone Number</b></label>
+    <input type="number" name="secondary_phone">
+    <br>
+    <label for="email"><b>Email Address</b></label>
+    <input type="email" name="email" required>
+    <br>
+    <label for="house_address"><b>House Address</b></label>
+    <input type="text" name="house_address">
+    <br>
+    <label for="City"><b>City</b></label>
+    <input type="text" name="city">
+    <br>
+    <label for="province"><b>Province</b></label>
+    <input type="text" name="province">
+    <br>
+    <input type="submit" disabled>
+</form>
+</div>
+
+</body>
 </html>
