CSS addition and Endpoint creation

--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>{{title}}</title>
-</head>
+    {{> header}}
 <body>
+    {{> menu}}
+
 
 <div class="container" action="">
 <form>
