Added Territories to province selector

--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -56,9 +56,9 @@
     <p><label for="City"><b>City</b></label></p>
     <input type="text" name="city">
 
-    <p><b>Province</b></p>
-    <select name="province">
-        <option disabled selected value="null_value">select your province</option>
+    <p><b>Province/Territory</b></p>
+    <select name="province/territory">
+        <option disabled selected value="null_value">select your province/territory</option>
         <option value="Alberta">Alberta</option>
         <option value="British Columbia">British Columbia</option>
         <option value="Manitoba">Manitoba</option>
@@ -69,6 +69,9 @@
         <option value="Prince Edward Island">Prince Edward Island</option>
         <option value="Quebec">Quebec</option>   
         <option value="Saskatchewan">Saskatchewan</option>
+        <option value="Yukon">Yukon</option>
+        <option value="Northwest Territories">Northwest Territories</option>
+        <option value="Nunavut">Nunavut</option>
     </select>
 
     <p><input type="submit"></p>
