--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,5 +3,20 @@
     {{> header}}
 <body>
     {{> menu}}
+    <br><br>
+    <div class="container">
+        <img src="/images/map.png" class="map">
+        <div class="col-md-4 col-lg-5 mr-auto my-md-4 my-0 mt-4 mb-1">
+            <h3>Event Details</h3>
+            <p>Friday September 14, 2018 | 8:30am - 6:30pm</p>
+            <br><br>
+            <p>Come spend the daysharing and learning with fellow power engineers and
+                combustion specialists while participating in seminars, lectures and
+                breakout discussions designed to support your plant operations.</p>
+        </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <h6 class="address">BCIT | 3700 Willingdon Ave, Burnaby, BC</h6>
+    </div>
 </body>
+{{> footer}}
 </html>
