--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,18 +1,50 @@
-<!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <title>{{title}}</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</head>
 
-<html>
-<div class="topnav">
+<nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#">
+        <img src="/images/navbar_logo_new.png" class="nav-img" alt="Responsive image">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+        aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-    {{!-- <a class="nav_image">
-        <img src="/images/bcit_logo.png"  alt="logo">
-    </a> --}}
-
-    <a href="/contact">Contact</a>
-    <a href="/agenda">Agenda</a>
-    <a href="/registration">Registration</a>
-    <a href="/about">About</a>
-    <a href="/home">Home</a>
-    
-
-</div>
-</html>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8080/home#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8080/about#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8080/registration#">Registration</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8080/agenda#">Agenda</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8080/speaker#">Speaker</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8080/contact#">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
