--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -28,23 +28,19 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/home#">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/about#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/registration#">Registration</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/agenda#">Agenda</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/speaker#">Speaker</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/contact#">Contact</a>
-            </li>
+            {{#if isAuthenticated}}
+            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+            {{else}}
+            <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="/registration#">Registration</a></li>
+            {{/if}}
+            
+            <li class="nav-item"><a class="nav-link" href="/about#">About</a></li> 
+            <li class="nav-item"><a class="nav-link" href="/agenda#">Agenda</a></li>           
+            <li class="nav-item"><a class="nav-link" href="/speaker#">Speaker</a></li>
+            <li class="nav-item"><a class="nav-link" href="/contact#">Contact</a></li>
         </ul>
     </div>
 </nav>
