--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,8 +15,8 @@
             <p id="failedLogin">{{failureMessage}}</p>
             {{/if}}
 
-            <label for="username"><b>Username or Email</b></label>
-            <input type="text" placeholder="username or email" name="username" required>
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="email" name="email" required>
 
             <label for="password"><b>Password</b></label>
             <input type="password" name="password" required>
