fixed registration css

--- a/views/speakers.hbs
+++ b/views/speakers.hbs
@@ -8,10 +8,10 @@
     <div class="container">
         <div class="grid-container">
             <div class="grid-item"><image id="profileImage" src="https://feedback.seekingalpha.com/s/cache/b6/21/b6213b40c842f6d52c80c22b890e7ae2.png" /></div>
-            <div class="grid-item">John Sullivan is a Human Resources specialist with a decade of successful experience in hiring and employee management.
-            John specializes in Human Resource technologies and regularly attends national training sessions to showcase new HR tech
-            trends, such as self-service, wellness apps, and people analytics tools. A strong believer in the power of positive
-            thinking in the workplace, John regularly develops internal wellness campaigns to assist employees with effective mental
+            <div class="grid-item">Josh Walls is a IT specialist with ten years experience in coding.
+            Josh specializes in technologies and regularly attends national training sessions to showcase new IT tech
+            trends, such as software, mobile apps. A strong believer in the power of positive
+            thinking in the workplace, Josh regularly develops internal wellness campaigns to assist employees with effective mental
             health techniques. John enjoys a good Netflix binge but can also be found on long bike rides on hilly country roads.</div>
             <div class="grid-item1">
                 <p class="speaker-info">Speaker topic: </p><br>
@@ -19,10 +19,10 @@
                 <p class="speaker-info">Location(room): </p>
             </div>
             <div class="grid-item"><image id="profileImage" src="https://feedback.seekingalpha.com/s/cache/b6/21/b6213b40c842f6d52c80c22b890e7ae2.png" /></div>
-            <div class="grid-item">John Sullivan is a Human Resources specialist with a decade of successful experience in hiring and employee management.
-            John specializes in Human Resource technologies and regularly attends national training sessions to showcase new HR tech
-            trends, such as self-service, wellness apps, and people analytics tools. A strong believer in the power of positive
-            thinking in the workplace, John regularly develops internal wellness campaigns to assist employees with effective mental
+            <div class="grid-item">Josh Walls is a IT specialist with ten years experience in coding.
+            Josh specializes in technologies and regularly attends national training sessions to showcase new IT tech
+            trends, such as software, mobile apps. A strong believer in the power of positive
+            thinking in the workplace, Josh regularly develops internal wellness campaigns to assist employees with effective mental
             health techniques. John enjoys a good Netflix binge but can also be found on long bike rides on hilly country roads.</div>
             <div class="grid-item">
                 <p class="speaker-info">Speaker topic: </p><br>
@@ -30,10 +30,10 @@
                 <p class="speaker-info">Location(room): </p>
             </div>
             <div class="grid-item"><image id="profileImage" src="https://feedback.seekingalpha.com/s/cache/b6/21/b6213b40c842f6d52c80c22b890e7ae2.png" /></div>
-            <div class="grid-item">John Sullivan is a Human Resources specialist with a decade of successful experience in hiring and employee management.
-            John specializes in Human Resource technologies and regularly attends national training sessions to showcase new HR tech
-            trends, such as self-service, wellness apps, and people analytics tools. A strong believer in the power of positive
-            thinking in the workplace, John regularly develops internal wellness campaigns to assist employees with effective mental
+            <div class="grid-item">Josh Walls is a IT specialist with ten years experience in coding.
+            Josh specializes in technologies and regularly attends national training sessions to showcase new IT tech
+            trends, such as software, mobile apps. A strong believer in the power of positive
+            thinking in the workplace, Josh regularly develops internal wellness campaigns to assist employees with effective mental
             health techniques. John enjoys a good Netflix binge but can also be found on long bike rides on hilly country roads.</div>
             <div class="grid-item">
                 <p class="speaker-info">Speaker topic: </p><br>
