--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,3 +194,8 @@ footer {
     grid-row-start: 1;
     grid-row-end: 3;
 }
+
+p {
+    margin-top: 15px !important;
+    margin-bottom: 0rem !important;
+}
