removed mariadb & bcryptjs dependencies

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -244,6 +244,7 @@ footer {
 p {
     margin-top: 15px !important;
     margin-bottom: 0rem !important;
+}
 
 .contact-container {
     display: grid;
