Login page layout

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -30,7 +30,7 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <a href="http://localhost:8080/login">Login</a>
+            <a href="http://localhost:8080/login2">Login</a>
         </ul>
     </div>
 </nav>
