--- a/views/login2.hbs
+++ b/views/login2.hbs
@@ -1,48 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+<link rel="stylesheet" type="text/css" href="/css/login_style.css" />
 {{> head}}
+</head>
 
 <body>
-
     {{> menu}}
     <div class="container">
-                <div class="row">
-                    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-                        <div class="card card-signin my-5">
-                            <div class="card-body">
-                                <h5 class="card-title text-center">Sign In</h5>
-                                <form class="form-signin">
-                                    <div class="form-label-group">
-                                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address"
-                                            required autofocus>
-                                        <label for="inputEmail">Email address</label>
-                                    </div>
-        
-                                    <div class="form-label-group">
-                                        <input type="password" id="inputPassword" class="form-control" placeholder="Password"
-                                            required>
-                                        <label for="inputPassword">Password</label>
-                                    </div>
-        
-                                    <div class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                        <label class="custom-control-label" for="customCheck1">Remember password</label>
-                                    </div>
-                                    <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign
-                                        in</button>
-                                    <hr class="my-4">
-                                    <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i
-                                            class="fab fa-google mr-2"></i> Sign in with Google</button>
-                                    <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i
-                                            class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+        <section id="content">
+            <form method="POST" action="/login">
+                <h1>{{heading}}</h1>
+                <hr>
+                {{#if failureFlag}}
+                <p id="failedLogin">{{failureMessage}}</p>
+                {{/if}}
+
+                <div>
+                    <input type="text" placeholder="username" name="username" id="username" required>
                 </div>
-            </div>
-    </div>
+                <div>
+                    <input type="password" name="password" id="password" required>
+                </div>
+                <div>
+                    <input type="submit" class="form_button" value="Submit" id="login_button" />
+                    {{!-- <input type="submit" value="Log in" /> --}}
+                </div>
+            </form><!-- form -->
+    
+        </section><!-- content -->
+    </div><!-- container -->
 </body>
-{{> footer}}
 
 </html>
