--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -21,16 +21,18 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/registration">Registration</a>
-            </li>
-            <li class="nav-item">
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="http://localhost:8080/contact">Contact</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <a href="http://localhost:8080/login2">Login</a>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8080/registration">Registration</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8080/login2">Login</a>
+            </li>
         </ul>
     </div>
 </nav>
