--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+<link rel="stylesheet" type="text/css" href="/css/login_style.css" />
 {{> head}}
+</head>
 
 <body>
     {{> menu}}
+    <div class="container">
+        <section id="content">
+            <form method="POST" action="/login">
+                <h1>{{heading}}</h1>
+                <hr>
+                {{#if failureFlag}}
+                <p id="failedLogin">{{failureMessage}}</p>
+                {{/if}}
 
-    <form method="post" action="/login">
-        <div class="form_container">
-            <h1>{{heading}}</h1>
-            <hr>
-
-            {{#if failureFlag}}
-            <p id="failedLogin">{{failureMessage}}</p>
-            {{/if}}
-
-            <label for="username"><b>Email</b></label>
-            <input type="text" placeholder="username" name="username" required>
-
-            <label for="password"><b>Password</b></label>
-            <input type="password" name="password" required>
-
-            <input type="submit" class="form_button" value="Submit" id="login_button" />
-        </div>
-    </form>
+                <div>
+                    <input type="text" placeholder="username" name="username" id="username" required>
+                </div>
+                <div>
+                    <input type="password" name="password" id="password" required>
+                </div>
+                <div>
+                    <input type="submit" class="form_button" value="Submit" id="login_button" />
+                    {{!-- <input type="submit" value="Log in" /> --}}
+                </div>
+            </form><!-- form -->
+    
+        </section><!-- content -->
+    </div><!-- container -->
 </body>
-{{> footer}}
 
 </html>
