--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
         <img class="nav-img" src="/images/bcit_logo.png">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -9,28 +9,37 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="http://localhost:8080">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
                 <div class="dropdown">
-                    <a class="nav-link" href="http://localhost:8080/about">About</a>
+                    <a class="nav-link" href="/about">About</a>
                     <div class="dropdown-content">
-                        <a class="nav-link" href="http://localhost:8080/agenda">Agenda</a>
-                        <a class="nav-link" href="http://localhost:8080/speaker">Speakers</a>
+                        <a class="nav-link" href="/agenda">Agenda</a>
+                        <a class="nav-link" href="/speaker">Speakers</a>
                     </div>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/registration">Registration</a>
             </li>
             <li class="nav-item">
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/contact">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
         </ul>
+
         <ul class="navbar-nav ml-auto">
-            <a href="http://localhost:8080/login2">Login</a>
+            {{#if isAuthenticated}}
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+            </li>
+            {{else}}
+            <li class="nav-item">
+                <a class="nav-link" href="/registration">Register</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+            {{/if}}
         </ul>
     </div>
 </nav>
