aligned input boxes on contact form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,12 +243,34 @@ footer {
 p {
     margin-top: 15px !important;
     margin-bottom: 0rem !important;
+    
+
 }
 
 .contact-container {
     display: grid;
-    grid-template-columns: 30%;
+    grid-template-columns: 1fr;
     grid-template-rows: auto;
+    /* grid-row-gap: 10px; */
     position: relative;
     padding: 20px;
+    text-align: center;
+    justify-items: center;
+    border: 5px solid rgba(114, 186, 94, 0.35);
+}
+
+.page-container {
+    
+    background: rgba(255, 213, 70, 0.4);
+    border: 5px solid rgba(236, 198, 48, 0.5);
+}
+
+h1 {
+    text-align: center;
+}
+
+
+div{
+    display: grid;
+    align-items: center;
 }
