--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -10,6 +10,7 @@
     <p><i>Please fill in the following fields.</i></p>
     <p><i>A * denotes required information.</i></p>
 
+    <div>
     <p><label for="email"><b>Email Address *</b></label></p>
     <input type="email" name="email" required>
 
