styling on contact form

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -9,28 +9,28 @@
 
         <div class="page-container">
             <div class="contact-container">
-                <div>
+                <div class="child-div">
                 <label for="name">Full Name</label>
                 <input id="name" name="name" type="text" />
                 </div>
 
                 <br>
 
-                <div>
+                <div class="child-div">
                 <label for="email">Email Address</label>
                 <input id="email" name="email" type="text" />
                 </div>
 
                 <br>
 
-                <div>
+                <div class="child-div">
                 <label for="phone number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">Phone Number</label>
                 <input id="phone number" name="phone number" type="text" />
                 </div>
             
                 <br>
 
-                <div>
+                <div class="child-div">
                 <label for="issue">What is your issue?</label>
                 <select id="issue" name="issue">
                     <option value="1"> General question</option>
@@ -41,7 +41,7 @@
 
                 <br><br>
 
-                <div>
+                <div class="child-div">
 
                 <label for="text">Type your inquiry</label>
                 <textarea id="text" name="text" rows="5" cols="70"></textarea>
