--- a/public/css/style.css
+++ b/public/css/style.css
@@ -270,7 +270,14 @@ h1 {
 }
 
 
-div{
+.child-div{
     display: grid;
     align-items: center;
+}
+
+input,select,textarea{
+    width: 100%;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
 }
