--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,6 +263,8 @@ p {
     
     background: rgba(255, 213, 70, 0.4);
     border: 5px solid rgba(236, 198, 48, 0.5);
+    margin: auto;
+    max-width: 70%;
 }
 
 h1 {
@@ -273,9 +275,10 @@ h1 {
 .child-div{
     display: grid;
     align-items: center;
+    grid-row-gap: 10px;
 }
 
-input,select,textarea{
+/* input,select,textarea{
     width: 100%;
     padding: 5px;
     border: none;
