--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -30,6 +30,9 @@
         <ul class="navbar-nav ml-auto">
             {{#if isAuthenticated}}
             <li class="nav-item">
+                <a class="nav-link" href="/profile/{{user.account_uuid}}">Edit Profile</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout</a>
             </li>
             {{else}}
