--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -9,8 +9,39 @@
     {{> menu}}
 
     <h1>{{heading}}</h1>
-    <button type="button">Add New</button>
+    <button type="button" data-toggle="modal" data-target="#createEventForm">Add New</button>
 
+    <div class="modal fade" id="createEventForm" tabindex="-1" role="dialog" aria-labelledby="createEventFormLabel" aria-hidden="true">
+        <form method="post" action="/newEvent" id="event_form">
+            <div id="createEvent" class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h4 class="modal-title w-100 font-weight-bold">Create New Event</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label data-error="wrong" data-success="right" for="eventForm-name">Event Name</label>
+                            <input type="text" class="form-control validate" name="name">
+                        </div>
+                        <div class="form-group">
+                            <label data-error="wrong" data-success="right" for="eventForm-date">Event Date</label>
+                            <input type="date" class="form-control validate" name="date">
+                        </div>
+                        <div class="form-group">
+                            <label data-error="wrong" data-success="right" for="eventForm-description">Event Description</label>
+                            <textarea class="form-control" rows="3" name="desc"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer d-flex justify-content-center">
+                        <button class="btn btn-deep-orange">Create</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 
 
 
