switch to aws db

--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -51,12 +51,14 @@
         <table>
             <tr>
                 <th>Event Name</th>
+                <th>Event Description</th>
                 <th>Date</th>
             </tr>
 
             {{#each event}}
             <tr>
                 <td>{{eventName}}</td>
+                <td>{{eventDescription}}</td>
                 <td>{{eventDate}}</td>
             </tr>
             {{/each}}
