--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,7 +9,7 @@
     {{> menu}}
 
     <form method="post" action="/login">
-        {{!-- <div class="form_container"> --}}
+        {{!-- <div class="form_container">
             <h1>{{heading}}</h1>
 
             <div class="page-container">
@@ -37,7 +37,7 @@
         {{!-- </div> --}}
                 </div>
             </div>
-    
+     --}}
     </form>
     <div class="container">
         <section id="content">
