--- a/views/administrator/event.hbs
+++ b/views/administrator/event.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" type="text/css" href="/css/admin_style.css">
     {{> head}}
@@ -7,17 +8,15 @@
 
 <body>
     {{> menu}}
-
+    
     <h1>{{heading}}</h1>
-
-    {{!-- Create New Event Form Popup --}}
-    <button type="button" data-toggle="modal" data-target="#createEventForm">Add New</button>
-    <div class="modal fade" id="createEventForm" tabindex="-1" role="dialog" aria-labelledby="createEventFormLabel" aria-hidden="true">
-        <form method="post" action="/newEvent" id="event_form">
-            <div id="createEvent" class="modal-dialog" role="document">
+    <button type="button" data-toggle="modal" data-target="#editEventForm">Edit Event</button>
+    <div class="modal fade" id="editEventForm" tabindex="-1" role="dialog" aria-labelledby="editEventFormLabel" aria-hidden="true">
+        <form method="post" action="/editEvent" id="editevent_form">
+            <div id="editEvent" class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header text-center">
-                        <h4 class="modal-title w-100 font-weight-bold">Create New Event</h4>
+                        <h4 class="modal-title w-100 font-weight-bold">Edit Event</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -25,42 +24,29 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label data-error="wrong" data-success="right" for="eventForm-name">Event Name</label>
-                            <input type="text" class="form-control validate" name="name">
+                            <input type="text" class="form-control validate" name="name" value={{name}}>
                         </div>
                         <div class="form-group">
                             <label data-error="wrong" data-success="right" for="eventForm-date">Event Date</label>
-                            <input type="date" class="form-control validate" name="date">
+                            <input type="date" class="form-control validate" name="date" value={{date}}>
                         </div>
                         <div class="form-group">
                             <label data-error="wrong" data-success="right" for="eventForm-description">Event Description</label>
-                            <textarea class="form-control" rows="3" name="desc"></textarea>
+                            <textarea class="form-control" rows="3" name="desc">{{desc}}</textarea>
                         </div>
                     </div>
                     <div class="modal-footer d-flex justify-content-center">
-                        <button class="btn btn-deep-orange">Create</button>
+                        <button class="btn btn-deep-orange">Confirm</button>
                     </div>
                 </div>
             </div>
         </form>
     </div>
 
-    <div>
-        <table>
-            <tr>
-                <th>Event Name</th>
-                <th>Event Description</th>
-                <th>Date</th>
-            </tr>
+    <br>
 
-            {{#each event}}
-            <tr>
-                <td><a href="/admin/events/{{event_uuid}}">{{eventName}}</a></td>
-                <td><a href="/admin/events/{{event_uuid}}">{{eventDescription}}</a></td>
-                <td><a href="/admin/events/{{event_uuid}}">{{eventDate}}</a></td>
-            </tr>
-            {{/each}}
-        </table>
-    </div>
+    <h3>Event Description</h3>
+    <p>{{desc}}</p>
 
 </body>
 {{> footer}}
