--- a/views/administrator/event.hbs
+++ b/views/administrator/event.hbs
@@ -24,7 +24,7 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label data-error="wrong" data-success="right" for="eventForm-name">Event Name</label>
-                            <input type="text" class="form-control validate" name="name" value={{name}}>
+                            <input type="text" class="form-control validate" name="name" value="{{name}}">
                         </div>
                         <div class="form-group">
                             <label data-error="wrong" data-success="right" for="eventForm-date">Event Date</label>
