--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -30,6 +30,9 @@
         <ul class="navbar-nav ml-auto">
             {{#if isAuthenticated}}
             <li class="nav-item">
+                <a class="nav-link" href="/rsvp">RSVP</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/profile/{{user.account_uuid}}">Edit Profile</a>
             </li>
             <li class="nav-item">
@@ -46,26 +49,3 @@
         </ul>
     </div>
 </nav>
-{{!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <img class="nav-img" src="/images/bcit_logo.png">
-    </a>
-    <div>
-        <ul class="navbar-nav">
-            <li>
-                <a class="nav-link active" href="#home">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-                <div class="dropdown">
-                    <a class="nav-link" href="http://localhost:8080/about">About</a>
-                    <div class="dropdown-content">
-                        <a class="nav-link" href="http://localhost:8080/agenda">Agenda</a>
-                        <a class="nav-link" href="http://localhost:8080/speaker">Speakers</a>
-                    </div>
-                </div>
-            </li>
-            <li ><a class="nav-link" href="#contact">Registration</a></li>
-            <li ><a class="nav-link" href="#about">Contact</a></li>
-        </ul>
-    </div>
-</nav> --}}
