load sponsor images dynamically on home page

--- a/views/administrator/index.hbs
+++ b/views/administrator/index.hbs
@@ -10,7 +10,7 @@
     <h2><a href="/admin/events">Events</a></h2>
     <h2>User Accounts</h2>
     <h2>Administrator Accounts</h2>
-    <h2>Website Content</h2>
+    <h2><a href="/admin/webcontent">Website Content</a></h2>
 </body>
 {{> footer}}
 
