--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,7 @@ form {
     .child_2 { 
         grid-area: 2 / 1 / 4 / 6;
         width: 100%;
-        height: 400px;
+        height: 600px;
         overflow: hidden;
         display:flex;
         flex-direction: column;
@@ -93,6 +93,7 @@ form {
         width: 100%;
         height: auto;
         float: right;
+        position: relative;
     }
 
 /*Sponsors css*/
@@ -321,3 +322,4 @@ p {
     margin-bottom: 0;
     list-style: none;
 } */
+
