--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,9 +4,9 @@
 <body>
     {{> menu}}
     <div class="parent">
-        <div class="child_1">
-            <h1 class="home_slider"><span>British Columbia Institute of Technology</span></h1>
-        </div>
+
+            <h1 class="home_slider child_1"><span>British Columbia Institute of Technology</span></h1>
+
 
         <div id="carouselHomeIndicators" class="carousel slide child_2" data-ride="carousel">
             <ol class="carousel-indicators">
