--- a/public/css/style.css
+++ b/public/css/style.css
@@ -323,3 +323,57 @@ p {
     list-style: none;
 } */
 
+
+/* This is CSS for the admin's side nav bar */
+
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    background-color: black;
+    overflow-x: hidden;
+    padding-top: 20px;
+    text-align: justify;
+}
+
+.sidenav a {
+    height: 20%;
+    padding: 15px 15px 15px 10px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+    text-align: center;
+    position: relative;
+
+}
+
+.sidenav a:hover {
+    background-color:#095E94;
+    color: white;
+    text-decoration: none;
+}
+.sidenav a.active {
+    background-color: #095E94;
+    color: white;
+    text-decoration: none;
+}
+
+.maincontent {
+    margin-left: 160px; /* Same as the width of the sidenav */
+    padding: 0px 10px;
+}
+
+p.sidenav_panel{
+    margin: 5% !important;
+    padding: 10px;
+    color: white;
+    font-size: 20px;
+    border-bottom: 3px solid white;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
