--- a/views/administrator/adminaccount.hbs
+++ b/views/administrator/adminaccount.hbs
@@ -7,24 +7,27 @@
 </head>
 
 <body>
-
     <div class="sidenav">
         <p class="sidenav_panel">Admin Panel</p>
         <a href="/admin/events">Events</a>
-        <a href="/admin/useraccounts">User Accounts</a>
-        <a href="/admin/adminaccount">Administrator Accounts</a>
-        <a href="/admin/webcontent" class="active">Website Content</a>
+        <a href="/admin/useraccounts" >User Accounts</a>
+        <a href="/admin/adminaccount" class="active">Administrator Accounts</a>
+        <a href="/admin/webcontent">Website Content</a>
     </div>
-    
+
     <div class="maincontent">
         {{> menu}}
 
-    <h1>{{heading}}</h1>
+        <h1>{{heading}}</h1>
+        
     </div>
+
+    
 
 </body>
 <div class="maincontent">
     {{> footer}}
 </div>
+
 
 </html>
