--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -6,6 +6,15 @@
 </head>
 
 <body>
+    <div class="sidenav">
+        <p class="sidenav_panel">Admin Panel</p>
+        <a href="/admin/events" class="active">Events</a>
+        <a href="/admin/useraccounts">User Accounts</a>
+        <a href="/admin/adminaccount">Administrator Accounts</a>
+        <a href="/admin/webcontent">Website Content</a>
+    </div>
+    
+    <div class="maincontent">      {{!-- without this class, content and side nav bar will overlap --}}
     {{> menu}}
 
     <h1>{{heading}}</h1>
@@ -61,8 +70,11 @@
             {{/each}}
         </table>
     </div>
+    </div>
 
 </body>
-{{> footer}}
+<div class="maincontent">
+    {{> footer}}
+</div>
 
 </html>
