--- a/views/administrator/event.hbs
+++ b/views/administrator/event.hbs
@@ -21,6 +21,7 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
+                    <input type="hidden" name="event_uuid" value={{event_uuid}}>
                     <div class="modal-body">
                         <div class="form-group">
                             <label data-error="wrong" data-success="right" for="eventForm-name">Event Name</label>
@@ -36,7 +37,7 @@
                         </div>
                     </div>
                     <div class="modal-footer d-flex justify-content-center">
-                        <button class="btn btn-deep-orange">Confirm</button>
+                        <input type="submit" class="btn btn-deep-orange" value="Confirm">
                     </div>
                 </div>
             </div>
@@ -46,6 +47,7 @@
     <br>
 
     <h3>Event Description</h3>
+    <p>{{date}}</p>
     <p>{{desc}}</p>
 
     <h3>Attendees</h3>
