added home page admin functions
alter carousel images
alter sponsor images

--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -24,3 +24,11 @@ td a:hover {
 td a:visited {
     text-decoration: none;
 }
+
+.filetable {
+    width: 50%;
+}
+
+.filetable form {
+    margin: 0;
+}
