--- a/views/administrator/webcontent.hbs
+++ b/views/administrator/webcontent.hbs
@@ -10,7 +10,11 @@
     {{> menu}}
 
     <h1>{{heading}}</h1>
-
+    <h2><a href="/admin/webcontent/home">Home</a></h2>
+    <h2><a href="/admin/webcontent/about">About</a></h2>
+    <h2><a href="/admin/webcontent/agenda">Agenda</a></h2>
+    <h2><a href="/admin/webcontent/speakers">Speakers</a></h2>
+    <h2><a href="/admin/webcontent/contact">Contact</a></h2>
 </body>
 {{> footer}}
 
