refactored admin nav as partial

--- a/views/administrator/adminaccount.hbs
+++ b/views/administrator/adminaccount.hbs
@@ -7,13 +7,7 @@
 </head>
 
 <body>
-    <div class="sidenav">
-        <p class="sidenav_panel">Admin Panel</p>
-        <a href="/admin/events">Events</a>
-        <a href="/admin/useraccounts" >User Accounts</a>
-        <a href="/admin/adminaccount" class="active">Administrator Accounts</a>
-        <a href="/admin/webcontent">Website Content</a>
-    </div>
+    {{> admin_menu}}
 
     <div class="maincontent">
         {{> menu}}
@@ -22,9 +16,8 @@
         
     </div>
 
-    
-
 </body>
+
 <div class="maincontent">
     {{> footer}}
 </div>
