--- a/views/administrator/index.hbs
+++ b/views/administrator/index.hbs
@@ -3,14 +3,7 @@
 {{> head}}
 
 <body>
-
-    <div class="sidenav">
-        <p class="sidenav_panel">Admin Panel</p>
-        <a href="/admin/events">Events</a>
-        <a href="/admin/useraccounts">User Accounts</a>
-        <a href="/admin/adminaccount">Administrator Accounts</a>
-        <a href="/admin/webcontent">Website Content</a>
-    </div>
+    {{> admin_menu}}
 
     <div class="maincontent">
         {{> menu}}
