--- a/views/rsvp.hbs
+++ b/views/rsvp.hbs
@@ -32,7 +32,7 @@
     <h3>You haven't signed up for any events!</h3>
 {{/if}}
 
-{{#if event.lengths}}
+{{#unless event.lengths}}
     <h2>RSVP to New Events!</h2>
     <form method="post" action="/eventRSVP">
         {{#each event}}
@@ -47,7 +47,7 @@
     </form>
 {{else}}
     <h3>Keep an eye out in your email for more updates</h3>
-{{/if}}
+{{/unless}}
 </body>
 {{> footer}}
 </html>
