--- a/views/administrator/webcontent/home.hbs
+++ b/views/administrator/webcontent/home.hbs
@@ -16,7 +16,7 @@
     <h1>{{heading}}</h1>
 
     <h2>Change Carousel Images</h2>
-    <button type="button" data-toggle="modal" data-target="#uploadCarouselImage">Add New</button>
+    <button type="button" data-toggle="modal" data-target="#uploadCarouselImage" class="btn btn-outline-success">Add New</button>
     <div class="modal fade" id="uploadCarouselImage" tabindex="-1" role="dialog" aria-labelledby="uploadCarouselImage"
         aria-hidden="true">
         <form method="post" action="/upload" enctype="multipart/form-data">
@@ -31,7 +31,9 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <input type="hidden" name="path" value="./public/images/index/carousel/">
-                            <label>!Make sure images are labeled descriptively!</label>
+                            <div class="alert alert-warning">
+                                <strong>!</strong> Make sure images are labeled descriptively <strong>!</strong>
+                            </div>
                             <input type="file" name="upload" multiple>
                         </div>
                         
@@ -44,8 +46,8 @@
         </form>
     </div>
 
-    <h3>Current Carousel Image Files</h3>
-    <table class="filetable">
+    <h3>Current Carousel Image Files ({{carouselImgs.length}})</h3>
+    <table class="filetable table-responsive">
         <tr>
             <th>File Name</th>
             <th></th>
@@ -53,20 +55,20 @@
     
         {{#each carouselImgs}}
         <tr>
-            <td>{{this}}</td>
+            <td><a href="#" data-toggle="popover" title="{{this}}" data-content='<img src="/images/index/carousel/{{this}}" width="100%"/>'>{{this}}</a></td>
             <td>
                 <form method="POST" action="/deleteFile">
                     <input type="hidden" name="path" value="./public/images/index/carousel/{{this}}">
-                    <input type="submit" value="Delete">
+                    <button type="submit" class="btn btn-outline-danger">Delete</button>
                 </form>
             </td>
         </tr>
         {{/each}}
     </table>
 
-    <h2>Change Sponsor Images</h2>
+    <h2>Change Sponsor Images ({{sponsorImgs.length}})</h2>
 
-    <button type="button" data-toggle="modal" data-target="#uploadSponsorImage">Add New</button>
+    <button type="button" data-toggle="modal" data-target="#uploadSponsorImage" class="btn btn-outline-success">Add New</button>
     <div class="modal fade" id="uploadSponsorImage" tabindex="-1" role="dialog" aria-labelledby="uploadSponsorImage"
         aria-hidden="true">
         <form method="post" action="/upload" enctype="multipart/form-data">
@@ -81,13 +83,15 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <input type="hidden" name="path" value="./public/images/index/sponsors/">
-                            <label>!Make sure images are labeled descriptively!</label>
+                            <div class="alert alert-warning">
+                                <strong>!</strong> Make sure images are labeled descriptively <strong>!</strong>
+                            </div>
                             <input type="file" name="upload" multiple>
                         </div>
     
                     </div>
                     <div class="modal-footer d-flex justify-content-center">
-                        <input type="submit" value="Upload">
+                        <button type="submit" class="btn btn-outline-secondary">Upload</button>
                     </div>
                 </div>
             </div>
@@ -103,11 +107,11 @@
     
         {{#each sponsorImgs}}
         <tr>
-            <td>{{this}}</td>
+            <td><a href="#" data-toggle="popover" title="{{this}}" data-content='<img src="/images/index/sponsors/{{this}}" width="100%"/>'>{{this}}</a></td>
             <td>
                 <form method="POST" action="/deleteFile">
                     <input type="hidden" name="path" value="./public/images/index/sponsors/{{this}}">
-                    <input type="submit" value="Delete">
+                    <button type="submit" class="btn btn-outline-danger">Delete</button>
                 </form>
             </td>
         </tr>
@@ -119,6 +123,8 @@
 </body>
 <div class="maincontent">
 {{> footer}}
+
+<script type="text/javascript" src="/js/admin/webcontent/home_script.js"></script>
 </div>
 
 </html>
