--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -3,6 +3,7 @@
     {{> head}}
 <body>
     {{> menu}}
+    <div class="container">
     <p>8:00am-8:30am Registration</p>
     <p>8:30am-9:30am Introductions and Agenda</p>
     <p>9:30am-10:30am Speaker 1</p>
@@ -11,6 +12,7 @@
     <p>11:40am-1:00pm Lunch</p>
     <p>1:00pm-2:00pm Speaker 3</p>
     <p>2:00pm-4:00pm Networking</p>
+    </div>
 </body>
 {{> footer}}
 </html>
