--- a/views/rsvp.hbs
+++ b/views/rsvp.hbs
@@ -7,6 +7,8 @@
 
 <body>
 {{> menu}}
+
+<div class="container">
 <h1>{{heading}}</h1>
 
 {{#if rsvps.length}}
@@ -48,6 +50,7 @@
 {{else}}
     <h3>Keep an eye out in your email for more updates</h3>
 {{/if}}
+</div>
 </body>
 {{> footer}}
 </html>
